--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.5.4",
-    "@strapi/plugin-users-permissions": "4.5.4",
-    "@strapi/strapi": "4.5.4",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-i18n": "^4.5.4",
+    "@strapi/plugin-users-permissions": "^4.5.4",
+    "@strapi/strapi": "^4.5.4",
+    "better-sqlite3": "^7.4.6",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
