--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^3.0.2"
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@jambonn/vue-concise-carousel": "^2.1.29"
   }
 }
