--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.2.5",
+    "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/strapi": "^1.6.3",
     "@vueuse/core": "^9.13.0",
     "@vueuse/nuxt": "^9.13.0",
-    "nuxt": "3.0.0"
+    "nuxt": "^3.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
