--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/plugin-graphql": "^4.14.0-alpha.0",
     "@strapi/plugin-i18n": "^4.5.4",
     "@strapi/plugin-users-permissions": "^4.5.4",
     "@strapi/strapi": "^4.5.4",
