--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "^4.5.4",
     "@strapi/strapi": "^4.5.4",
     "better-sqlite3": "^7.4.6",
-    "strapi-plugin-populate-deep": "^2.0.0"
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "strapi-plugin-sitemap": "^3.0.3"
   },
   "author": {
     "name": "A Strapi developer"
