--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-carousel-nuxt": "^1.1.1"
   },
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
