--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@nuxtjs/device": "^3.1.1",
     "@vesp/nuxt-fontawesome": "^1.0.4"
   }
 }
