--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue3-carousel-nuxt": "^1.1.1"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@nuxtjs/device": "^3.1.1",
