get up and running again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Krisnavolgy",
+  "name": "krisnavolgy",
   "version": "0.0.4",
   "private": true,
   "type": "module",
@@ -22,6 +22,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@nuxtjs/device": "^3.1.1",
-    "@vesp/nuxt-fontawesome": "^1.0.4"
+    "@vesp/nuxt-fontawesome": "^1.0.4",
+    "vue-mess-detector-nuxt-devtools": "^0.1.2"
   }
 }
