--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
+    "@formkit/nuxt": "^1.6.7",
     "@nuxt/icon": "^1.5.6",
     "@nuxt/image": "^1.8.1",
     "@vueuse/nuxt": "^10.9.0",
