--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-sqlite3": "^11.5.0",
     "nuxt": "^3.11.2",
     "nuxt-token-authentication": "^1.0.0",
+    "pinia": "^2.2.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-carousel-nuxt": "^1.1.1"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.2.5",
     "@nuxtjs/device": "^3.1.1",
+    "@pinia/nuxt": "^0.6.0",
     "@types/bcrypt": "^5.0.2",
     "vue-mess-detector-nuxt-devtools": "^0.1.2"
   }
