--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "^1.5.6",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
+    "@nuxtjs/algolia": "^1.10.2",
     "@vueuse/nuxt": "^10.9.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.5.0",
