--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,7 @@
     { "rule": "*quotes", "severity": "off", "fixable": true },
     { "rule": "*semi", "severity": "off", "fixable": true }
   ],
-
+  "eslint.useFlatConfig": true,
   // Enable eslint for all supported languages
   "eslint.validate": [
     "javascript",
