--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
     "@formkit/nuxt": "^1.6.7",
+    "@nuxt/eslint": "^0.6.1",
     "@nuxt/icon": "^1.5.6",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
@@ -32,6 +35,7 @@
     "@nuxtjs/device": "^3.1.1",
     "@pinia/nuxt": "^0.6.0",
     "@types/bcrypt": "^5.0.2",
+    "typescript": "^5.6.3",
     "vue-mess-detector-nuxt-devtools": "^0.1.2"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
