--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "vitest"
   },
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
@@ -33,11 +34,15 @@
   },
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.2.5",
+    "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/device": "^3.1.1",
     "@pinia/nuxt": "^0.6.0",
     "@types/bcrypt": "^5.0.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.11.7",
+    "playwright-core": "^1.49.0",
     "typescript": "^5.6.3",
-    "vue-mess-detector-nuxt-devtools": "^0.1.2"
+    "vitest": "^2.1.6"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
