--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
+  "semi": false,
   "singleQuote": true,
-  "semi": true
+  "htmlWhitespaceSensitivity": "ignore",
+  "vueIndentScriptAndStyle": true,
+  "bracketSameLine": false,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "endOfLine": "auto"
 }
