--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
     "@formkit/nuxt": "^1.6.7",
+    "@google/generative-ai": "^0.21.0",
     "@number-flow/vue": "^0.2.5",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/icon": "^1.5.6",
